2006-06-28  Andrew Cagney  <cagney@redhat.com>

	* TestTaskObserverBlocked.java: Add testAddObserverAfterUnblock.

2006-06-27  Andrew Cagney  <cagney@redhat.com>
            Phil Muldoon  <pmuldoon@redhat.com>
            Sami Wagiaalla  <swagiaal@redhat.com>
	
	* TestTaskObserverBlocked.java
	(testRefreshAfterUnblockedForkExits): New test.
	* TaskState.java: In "detachedBlocked" state, remember to
	transition to "detached" when the last blocking observer is
	removed.
	
2006-06-27  Phil Muldoon  <pmuldoon@redhat.com>

	* StressAttachDetachRapidlyForkingMainTask.java: Add refreshTimer.
	Add brokenXXX() to make sure testsuite passes.

2006-06-26  Phil Muldoon  <pmuldoon@redhat.com>

	* StressAttachDetachRapidlyForkingMainTask.java: New.

2006-06-25  Andrew Cagney  <cagney@redhat.com>

	* StressAttachDetachSignaledTask.java: Enable.  Remove code doing
	back-to-back attach-detach as it is so agressive that the process
	never makes forward progress.
	* TaskState.java: During an attach save any signal delivering it
	after the attach has completed.

	* StressAttachDetachSignaledTask.java: New file and tests,
	disable.

	* TestLib.java (brokenXXX, trueXXX): Add.
	* TestI386Regs.java: Use.
	* TestI386Modify.java: Use.
	* TestTaskSyscallObserver.java: Use.
	* TestModify.java: Use.
	
	* TaskState.java: Run EMACS indent over code.
	* ProcTasksObserver.java: Ditto.
	* TestLib.java: Ditto.
	* TestProcTasksObserver.java: Ditto.

2006-06-24  Sami Wagiaalla  <swagiaal@redhat.com>

	* ProcTasksObserver.java (addFailed): Made addFailed call addFailed of
	the observer instead of throwing an exception.

2006-06-23  Nurdin Premji  <npremji@redhat.com>

	* TestLib.java (DetachedAckProcess): Added
	* TestProcTasksObserver.java: Added, was TestOffspringObserver.
	* ProcTasksObserver.java: Renamed, was OffspringObserver. Implemented 
	TasksObserver.Terminated, unimplemented TasksObserver.ForkedObserver.
	(requestAddObservers): added. To keep track of all the tasksObservers
	implemented.