@@ -116,6 +116,16 @@ public class TestLib
     }
 
     /**
+     * run event loop while the given proc is not removed
+     * if it is removed before the timeout the assert fails
+     * other wise the test passes.
+     * */
+    static void assertRunWhileProcNotRemoved(int pid, int timeout){
+      new StopEventLoopWhenProcRemoved(pid);
+       assertFalse("Event loop has been interrupted by proc removal", Manager.eventLoop.runPolling (timeout * 1000));
+    }
+    
+    /**
      * Run the event loop for a short period of time until it is
      * explicitly stopped (using EventLoop . requestStop).  During
      * this period poll for external events.
@@ -838,6 +848,7 @@ public class TestLib
 	int addedCount;
 	public void addedTo (Object o)
 	{
+	    logger.log(Level.FINE, "{0} addedTo\n", this);
 	    addedCount++;
 	}
 	/**
@@ -1147,7 +1158,7 @@ public class TestLib
      * An observer that stops the eventloop when the process
      * with the given pid is removed.
      */
-    protected class StopEventLoopWhenProcRemoved
+    protected static class StopEventLoopWhenProcRemoved
 	implements Observer
     {
 	boolean p;
