@@ -1,3 +1,12 @@
+2006-06-28  Sami Wagiaalla  <swagiaal@redhat.com>
+
+	* TestTaskTerminateObserver.java (testBlockingWhileTerminating): New
+	test.
+	* TestLib.java (assertRunWhileProcNotRemoved): New test untility 
+	function.
+	* TaskState.java: Added handling for block requests of a terminating
+	task both in normal running mode and in syscall mode (fix for bz 2862).
+
 2006-06-28  Andrew Cagney  <cagney@redhat.com>
 
 	* TestTaskObserverBlocked.java: Add testAddObserverAfterUnblock.
